content/vault/v1.19.x/content/docs/secrets/ldap/ibm-racf.mdx
---
layout: docs
page_title: Manage IBM RACF LDAP credentials
description: >-
  Automatically manage Manage IBM RACF LDAP credentials with the LDAP secrets
  plugin.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-12-02T10:07:54-08:00
last_modified: 2025-12-02T10:07:54-08:00
# END AUTO GENERATED METADATA
---

# Manage IBM RACF LDAP credentials

Use the LDAP plugin with IBM Resource Access Control Facility (RACF) mainframe
security systems to manage authentication and access control in enterprise
environments.


## Before you start 

- **Check your Vault permissions**. You must have permission to enable and
  configure plugins in Vault.
- **Create a RACF-enabled LDAP user account for Vault**. You must have a
  RACF-enabled LDAP user account with sufficient privileges to manage user
  credentials.
- **Decide on a [Vault password policy](/vault/docs/concepts/password-policies)**.
  You can use traditional passwords or passphrases with z/OS, but we strongly
  recommend using passphrases, which provide stronger protection against
  unauthorized access and brute-force attacks. RACF passphrases can include
  mixed-case letters, numbers, spaces, and special characters.


## Step 1: Create a Vault password policy

To securely manage z/OS LDAP credentials in Vault you must create a password
policy in Vault to control how the plugin rotates LDAP credentials.

<Note>

If your z/OS deployment allows the ICHPWX11 exit routine, you can use password
phrases 9 - 100 characters long. Otherwise, passphrases must be 14 - 100
characters.

</Note>

1. Create a policy configuration file, `racf-policy.hcl`.

   <Tabs>

   <Tab heading="Passphrase policy" group="passphrase">

   @include 'password-policies/example-config/ibm-racf-passphrase.mdx'

   </Tab>

   <Tab heading="Password policy" group="password">

   @include 'password-policies/example-config/ibm-racf-password.mdx'

   </Tab>

   </Tabs>

1. Save the policy to Vault.

   <Tabs>

   <Tab heading="CLI" group="cli">

   @include 'password-policies/save-policy/cli.mdx'

   </Tab>

   <Tab heading="API" group="api">

   @include 'password-policies/save-policy/api.mdx'

   </Tab>

   </Tabs>

1. Verify the password policy saved correctly.

   <Tabs>

   <Tab heading="CLI" group="cli">

   @include 'password-policies/read-policy/cli.mdx'

   </Tab>

   <Tab heading="API" group="api">

   @include 'password-policies/read-policy/api.mdx'

   </Tab>

   </Tabs>



## Step 2: Enable the LDAP secrets plugin

<Tabs>

<Tab heading="CLI" group="cli">

@include 'ldap/enable/cli.mdx'

</Tab>

<Tab heading="API" group="api">

@include 'ldap/enable/api.mdx'

</Tab>

<Tab heading="GUI" group="gui">

@include 'ldap/enable/gui.mdx'

</Tab>

</Tabs>



## Step 3: Create your plugin configuration file  

For easier maintenance and reuse, create a JSON file with your preferred
configuration details.

Use the schema enum `racf`, the `phrase` credential type, and the name of your
Vault password policy to create a basic configuration file called `ldap.json`:


@include 'ldap/example-config/racf/ibm-setup.mdx'


## Step 4: Configure the LDAP plugin

Configure the LDAP plugin with your RACF-enabled LDAP user and connect Vault to
your IBM RACF LDAP server.

<Tabs>

<Tab heading="CLI" group="cli">

@include 'ldap/apply-config/cli.mdx'

</Tab>

<Tab heading="API" group="api">

@include 'ldap/apply-config/api.mdx'

</Tab>

<Tab heading="GUI" group="gui">

@include 'ldap/apply-config/gui.mdx'

</Tab>

</Tabs>



## Step 5: Rotate the root password 

Once you connect Vault and your LDAP server, rotate the root password for the 
`binddn` account so that only Vault knows the credential.

<Tabs>

<Tab heading="CLI" group="cli">

@include 'ldap/rotate-root/cli.mdx'

</Tab>

<Tab heading="API" group="api">

@include 'ldap/rotate-root/api.mdx'

</Tab>

</Tabs>

<Note>

Once you rotate the root credential you cannot retrieve the newly generated
password.

</Note>



## Step 6: Create a static role


1. Create a configuration file, `ldap-role.json` with your role settings:

   @include 'ldap/example-config/static-role/ibm-racf.mdx'

1. Save the new role.
   <Tabs>

   <Tab heading="CLI" group="cli">

   @include 'ldap/create-static-role/cli.mdx'

   </Tab>

   <Tab heading="API" group="api">

   @include 'ldap/create-static-role/api.mdx'

   </Tab>

   </Tabs>

1. Confirm the role settings by requesting credentials from the plugin:

   <Tabs>

   <Tab heading="CLI" group="cli">

   @include 'ldap/get-role-creds/cli.mdx'

   </Tab>

   <Tab heading="API" group="api">

   @include 'ldap/get-role-creds/api.mdx'

   </Tab>

   </Tabs>



## Step 7: Test the static role

Vault automatically rotates passwords based on the rotation period you set in
the static role configured. 

1. Fetch credentials for the static role. The response includes the time before
   the next rotation (ttl) in addition to the current credential.

   <Tabs>

   <Tab heading="CLI" group="cli">

   @include 'ldap/get-role-creds/cli.mdx'

   </Tab>

   <Tab heading="API" group="api">

   @include 'ldap/get-role-creds/api.mdx'

   </Tab>

   </Tabs>

1. Use the provided credential to SSH into your mainframe z/OS system:

   ```shell-session
   $ ssh <username>@<zos-hostname>
   ```

   For example:

   <CodeBlockConfig hideClipboard>

   ```shell-session
   $ ssh vault@pksthc4.pok.stglabs.ibm.com
   ```
  
   </CodeBlockConfig>

## Additional resources

<Tabs>

<Tab heading="HashiCorp content">

- [Full LDAP plugin API reference](/vault/api-docs/secret/ldap)
- [Use dynamic credentials](/vault/docs/secrets/ldap/dynamic-credentials)
- [Let clients check out service accounts](/vault/docs/secrets/ldap/service-account-checkout)

</Tab>

<Tab heading="IBM content">

- [Passwords and password phrases overview](https://www.ibm.com/docs/en/zos/2.5.0?topic=users-passwords-password-phrases)
- [RACF password-phrase policy](https://www.ibm.com/docs/en/zos/2.4.0?topic=syntax-password-phrase-specify-user-password-password-phrase)
- [Resource access control facility overview](https://www.ibm.com/docs/en/zos-basic-skills?topic=zos-what-is-racf)

</Tab>

</Tabs>
